# arboric

./: .dockerignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
docs/: config.toml
docs/content/post/: announcing-arboric-graphql-api-gateway.md
docs/public/: 404.html  index.html  sitemap.xml
docs/public/categories/: index.html
docs/public/tags/: index.html
etc/: libssl1.1_1.1.1d-0+deb10u1_amd64.deb
etc/arboric/: config.yml  default-config.yml
etc/grafana/provisioning/dashboards/: dashboard.yml
etc/grafana/provisioning/datasources/: datasource.yml
src/: lib.rs
src/arboric/: error.rs  listener.rs  mod.rs  proxy.rs  proxy_service.rs
src/arboric/abac/: mod.rs
src/arboric/config/: builder.rs  listener_builder.rs  mod.rs  yaml.rs
src/arboric/graphql/: mod.rs  pattern.rs
src/arboric/influxdb/: mod.rs
test/: README.md  admin_only.json  bad_request.json  heroes.gql  heroes.json  hmac_secret  multi.json
