[package]
name = "arboric"
version = "0.1.0"
authors = ["Alistair A. Israel <aisrael@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
graphql-parser = "0.2.3"
http = "0.1"
hyper = "0.12"
log = "0.4"
mime = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.6.0"
